--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -19,7 +19,6 @@
 
 对学习的热情和积极主动，以及对申请的学校有浓厚的兴趣，这些是学生能否进入大学的关键。但在日益竞争激烈的环境下，这只是大.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 6:51 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693210.md#1" target="_blank">“三世因果”善恶有报 为何有时看不到果报？</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693210.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/9300e5005b3dafe3efaa917d00d05758-150x120.png" align ="left"></a>小善行得小福报，大善行得大福报；小恶行得小恶报，大恶行得大恶报。看东西方的实证故事，“三世果报”过去世造因今生受果报，今生造因，未来世受果报，诚然不假！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 5:07 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/4/n11699247.md#1" target="_blank">土耳其“罗宾汉”到处送钱 替穷人付清债务</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/4/n11699247.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1024421724-150x120.jpg" align ="left"></a>土耳其最大城市伊斯坦堡（Istanbul）最近出现一名自称“罗宾汉”（Robin Hood）的神秘人物，他不但替穷人付清债务，还送钱给他们花用。对于饱受物价上涨之苦的当地居民而言，这无异是上天派来救他们的天使。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 1:45 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11688928.md#1" target="_blank">天地清明引(126) 明光殒－腥风血雨1</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11688928.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/DiezAlbumsArmedRiders_II-150x120.jpg" align ="left"></a>景阳身死，白门柳殒身山崖，纳兰庭芳回转荷城，片刻不待，下令兵力齐出，直取光明顶。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682616.md#1" target="_blank">“坡仙奎宿”苏东坡是奎星下凡？</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682616.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Twenty-eight_mansions-150x120.jpg" align ="left"></a>元曲称，在天上，苏东坡身为奎星，“侍玉皇金莲夜香”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 7:05 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677283.md#1" target="_blank">【馨香雅句】云在青天水在瓶</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677283.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/12/cd5ecc1b59cda894eb0b461512caf19d-150x120.jpg" align ="left"></a>欢迎来到馨香雅句，我是雅兰，在生活中人们常说“人生不如意十之八九”，那么面对这些不如意，如何让内心得到平静和安宁呢？今天和大家分享一句诗“云在青天水在瓶”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 12:12 AM			</td></tr>
@@ -27,6 +26,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11697885.md#1" target="_blank">【看川普推特学英文】川普突访阿富汗 与美军共度感恩节</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11697885.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1185339977-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" alt="TOPSHOT - US President Donald Trump poses for selfies during a Thanksgiving dinner with US troops at Bagram Air Field during a surprise visit on November 28, 2019 in Afghanistan. (Photo by Olivier Douliery / AFP) (Photo by OLIVIER DOULIERY/AFP via Getty Images)" align ="left"></a>感恩节（Thanksgiving Day）在西方是年度最重要的节日之一。家人及亲朋好友会在这天团圆相聚，借着火鸡大餐之际叙叙旧，回顾这一年的努力，并且聊聊未来的心愿与展望。川普总统选择到美军在阿富汗的基地，与这些阵前将士们同乐，感恩他们远在他乡，却为国家无私的奉献及付出。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 10:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682364.md#1" target="_blank">大劫时 总有人能幸免于难</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682364.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1602241529342483-150x120.jpg" align ="left"></a>世上有很多这样的例子，每当大劫大难降临时，总有人能幸免于难，平安历劫。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 5:37 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/16/10/18/n8407193.md#1" target="_blank">文艺复兴四大经典绘画风格与技法</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/16/10/18/n8407193.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/10/5-28-150x120.jpg" align ="left"></a>文艺复兴绘画中出现的Cangiante（换色法）、Chiaroscuro（明暗对照法）、Sfumato（晕涂法）和Unione（统合法）这四种风格迥异的绘画技法被后世广为流传，许多艺术巨匠都曾经出神入化地运用它们创造出辉煌而美丽的艺术珍品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 5:22 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11697029.md#1" target="_blank">《睡眠救赎-缺氧型失眠：鱼池平衡理论》书摘（2）</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11697029.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/12/shutterstock_773165707-150x120.jpg" align ="left"></a>经过我的整理后，发现所有类别的安眠药物在使用过后都有几种共同的副作用：疲累、想睡、意识模糊、焦虑等等情况，而其他的副作用则因为不同的药物类别而有一些差异，包括严重一点的副作用，如暴毙死亡、自杀、重度忧郁、心脏衰竭、帕金森氏症、糖尿病、心律不整等等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 3:45 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703794.md#1" target="_blank">台湾古典诗：中美贸易战</a><br></h3>美中贸易地雷埋，引爆工商百业乖， 升级转型风险避，全球布局展高怀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 3:46 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703791.md#1" target="_blank">五律：火</a><br></h3> 从命燧皇志，奋挥千载情。 阿房付尘土，赤壁助豪英。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 3:43 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11695165.md#1" target="_blank">唐浩：港殇</a><br></h3>金风鸣泪叶   秋暮颂鸿文   悲壮英魂逝   浩然正气存......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 12:06 AM			</td></tr>
