--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -22,6 +22,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693563.md#1" target="_blank">【名家专栏】弹劾听证内藏共产主义颠覆模式</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693563.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1188699287-1200x848-150x120.jpg" align ="left"></a>著名的反共持不同政见者弗拉基米尔?布科夫斯基（Vladimir Bukovsky）于11月19日在伦敦公墓下葬。而在华盛顿，美国的民主制度却给自己蒙污。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 4:21 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693233.md#1" target="_blank">王友群：为什么中共总是骂美国？</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693233.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911280906212188-150x120.jpg" align ="left"></a>11月27日，美国总统川普签署《香港人权与民主法案》。次日，10万香港人聚集爱丁堡广场，对川普表达由衷的感谢。这个法案被称为送给香港人最好的感恩节礼物。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 3:38 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11692512.md#1" target="_blank">君辞：共产党凭什么统治中国</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11692512.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/15c0f6b064586129_ttl7dayyRQ_10________x_-150x120.jpg" align ="left"></a>中国共产党控制舆论、控制思想的方法之一就是混淆概念。不知不觉中，中国的人们已经习惯了认为国家就是共产党，共产党就是国家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 3:10 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11697658.md#1" target="_blank">廖祖笙：就是纳粹也不会这样对待同胞</a><br></h3>习近平先生，党国花费巨资在网上构筑的“伟大的墙”，向来就是一面破墙，对于位处权力巅峰的你而言，想要看到墙外的声声血、字字泪，肯定也不会是什么难事。国之重器只有看得到一枚硬币的正反面，才能尽量避免决策失误，对接下来的工作方向，也才可以及时做出相应的调整。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 9:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11697518.md#1" target="_blank">祝君安：致红朝中人</a><br></h3>曾燃激情曾整风，一路斗来一路痛;
 官乏治术民走险，党欲独裁统西东;
 孽海妖凶珠有泪，刀山虎贪恨无穷;
@@ -53,8 +54,5 @@
 责任编辑：高义......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 7:25 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693751.md#1" target="_blank">朱同：多行不义必自毙</a><br></h3>最近党媒都很火大、鬼火都绿了，忙到脚不沾地，批判“香港人权与民主法案”，批判“美帝霸权主义”。好多都是陈词滥调，没有新意。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 7:13 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/22/n11674929.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（6）</a><br></h3>在了解学习任何一个学科、领域时，首先需要知道的是相关的概念。概念被认为是心智的表征，对象或客体的抽象，是构成人类思维的基本单元，在认知的所有方面都扮演着重要角色。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 2:20 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693309.md#1" target="_blank">杜彼得： 举贤而授能 大贤处上 不肖处下</a><br></h3>吴阿姨辞世?美东华人的缩影
-
-认识吴世珊于90年代初，法拉盛华人最早每年办大型筹款餐会的民间组织，就非“吴阿姨服务中心”莫属，也得到前市议员茱莉哈里逊大力的支持。想来也好笑，和吴阿姨认识到互动良好，介绍人竟是哈里逊市议员，她们二位都是女强人，做起事来干净也俐落，令时年只有30多岁的笔者，相当的敬仰。记得90年代有很.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 11:36 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/news392_2.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/news392_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/news392_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_2.htm">http://www.epochtimes.com/gb/news392_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
